<resources>
    <string name="app_name">Asignaturas Aplicaciones Software</string>
    <string name="career">GRADO EN TÉCNICAS DE APLICACIONES DE SOFTWARE</string>

    <string name="title1">Desarrollo en dispositivos móviles I</string>
    <string name="descriptionShort1">La programación es una ciencia principalmente práctica y, como la mayoría de ciencias prácticas, esta se estructura en proyectos.</string>

    <string name="title2">Desarrollo en entornos web</string>
    <string name="descriptionShort2">La documentación presente recoge información sobre el funcionamiento de la asignatura "Desarrollo en entornos web" (DEW) del plan de estudios del Grado en Técnicas de Aplicaciones de Software (GTAS).</string>

    <string name="title3">Programación orientada a objetos</string>
    <string name="descriptionShort3">La Programación Orientada a Objetos (POO) es uno de los paradigmas más populares en la actualidad y Java es uno de los lenguajes más usados en la industria actualmente.</string>

    <string name="title4">Fotografía</string>
    <string name="descriptionShort4">La asignatura pretende que el alumno reciba los conocimientos técnicos y prácticos suficientes para que al finalizarla sea capaz de desarrollarse en el mundo de la fotografía de forma autónoma.</string>

    <string name="title5">Career and technology</string>
    <string name="descriptionShort5">La asignatura Career and Technology responde a la demanda de profesionales con formación multidisciplinar preparados para trabajar en un mundo global con herramientas adecuadas y una mentalidad emprendedora. </string>

    <string name="title6">Redes de àrea local</string>
    <string name="descriptionShort6">La asignatura de Redes de Área Local pretende proporcionar a los alumnos conocimientos fundamentales sobre redes mediante una combinación de actividades como clases magistrales y una fuerte presencia de prácticas con equipamiento real que apoyan el aprendizaje.</string>

    <string-array name="credits">
        <item>Créditos: 6 ECTS.</item>
        <item>Créditos: 6 ECTS.</item>
        <item>Créditos: 6 ECTS.</item>
        <item>Créditos: 6 ECTS.</item>
        <item>Créditos: 4 ECTS.</item>
        <item>Créditos: 6 ECTS.</item>
    </string-array>

    <string-array name="titles">
        <item>Desarrollo en dispositivos móviles I</item>
        <item>Desarrollo en entornos web</item>
        <item>Programación orientada a objetos</item>
        <item>Fotografía</item>
        <item>Career and technology</item>
        <item>Redes de àrea local</item>
    </string-array>

    <string-array name="teachers">
        <item>Profesor/a: Manel Roca Relats</item>
        <item>Profesor/a: Daniel Amo Filvà</item>
        <item>Profesor/a: Pol Muñoz Pastor</item>
        <item>Profesor/a: Joan De la Malla Gómez</item>
        <item>Profesor/a: Larisa Tatge</item>
        <item>Profesor/a: Julia Sánchez Rodríguez</item>
    </string-array>

    <string-array name="shortdescription">
        <item>La programación es una ciencia principalmente práctica y, como la mayoría de ciencias prácticas, esta se estructura en proyectos.</item>
        <item>La documentación presente recoge información sobre el funcionamiento de la asignatura "Desarrollo en entornos web" (DEW) del plan de estudios del Grado en Técnicas de Aplicaciones de Software (GTAS).</item>
        <item>La Programación Orientada a Objetos (POO) es uno de los paradigmas más populares en la actualidad y Java es uno de los lenguajes más usados en la industria actualmente.</item>
        <item>La asignatura pretende que el alumno reciba los conocimientos técnicos y prácticos suficientes para que al finalizarla sea capaz de desarrollarse en el mundo de la fotografía de forma autónoma.</item>
        <item> La asignatura Career and Technology responde a la demanda de profesionales con formación multidisciplinar preparados para trabajar en un mundo global con herramientas adecuadas y una mentalidad emprendedora.</item>
        <item> La asignatura de Redes de Área Local pretende proporcionar a los alumnos conocimientos fundamentales sobre redes mediante una combinación de actividades como clases magistrales y una fuerte presencia de prácticas con equipamiento real que apoyan el aprendizaje.</item>
    </string-array>

    <string-array name="longdescription">
        <item>La programación es una ciencia principalmente práctica y, como la mayoría de ciencias prácticas, esta se estructura en proyectos. Esta es la premisa de la cual parte la asignatura de Proyectos de Programación 2. El objetivo principal de la asignatura es ampliar los conocimientos de los alumnos en el campo de la programación, presentándolos un nuevo ámbito: la programación para dispositivos móviles. Dado que el mundo de la programación para dispositivos móviles es muy amplio, la asignatura se centrará en el sistema que, de momento, tiene una mayor presencia en el mercado. Este sistema es Android. La asignatura tendrá también como objetivo dotar al alumno de técnicas y conocimientos, tanto prácticos como teóricos, que le permitan afrontar el mundo de la programación con las herramientas necesarias. La asignatura pretende utilizar una metodología eminentemente práctica para impartir el nuevo conocimiento. De esta forma será habitual que los conocimientos teóricos voy acompañados de ejercicios, y/o proyectos, tanto individuales como en equipo.</item>
        <item>La documentación presente recoge información sobre el funcionamiento de la asignatura "Desarrollo en entornos web" (DEW) del plan de estudios del Grado en Técnicas de Aplicaciones de Software (GTAS). Es importante que el alumno lea detenidamente todos los apartados, que las dudas que le surjan los esclarezca con el profesorado implicado y que tome este documento como un punto de consulta referente a lo largo de su participación en la asignatura. A continuación, se sitúa el contexto de la asignatura y se motiva su estudio, se presenta el profesorado implicado y se indica la dedicación orientativa del alumno para que tenga un aprendizaje satisfactorio. Después se exponen los objetivos, los resultados de aprendizaje, las competencias que se ejercitan, las metodologías docentes, las actividades formativas y el sistema de evaluación, incluyendo también la descripción de los contenidos, la planificación según el calendario académico y un conjunto de referencias bibliográficas. El objetivo de la asignatura Desarrollo en entornos web es que los alumnos adquieran los conocimientos necesarios para Desarrollar Aplicaciones utilizando tecnologías web. Las tecnologías utilizadas y que se imparten son HTML, CSS y JavaScript. Actualmente son el estándar recomendado por la W3C (World Wide Consortium) y consideradas las mejores para el Desarrollo web. El nivel impartido en la asignatura es alto, utilizando el nuevo estándar HTML5, CSS3, SCSS, objetos y librerías JavaScript, editores GUI y automatizaciones simulando un entorno de trabajo real, por ejemplo, con Node.js La asignatura tiene una intensidad de trabajo de 6 créditos ECTS, que equivale a 150 horas de dedicación para el estudiante.</item>
        <item>La Programación Orientada a Objetos (POO) es uno de los paradigmas más populares en la actualidad y Java es uno de los lenguajes más usados en la industria actualmente. El objetivo es que el alumno sea capaz de plantear soluciones siguiendo un patrón orientado a objetos, así como implementar-las en el lenguaje Java. Esta asignatura será muy útil como base para otras asignaturas en que se usan lenguajes orientados a objetos, y también para el desarrollo de aplicaciones móviles, siendo Java el lenguaje más usado para implementar aplicaciones para Android.</item>
        <item>La asignatura pretende que el alumno reciba los conocimientos técnicos y prácticos suficientes para que al finalizarla sea capaz de desarrollarse en el mundo de la fotografía de forma autónoma. Durante el semestre se verán todos los temas más importantes de la fotografía como se la técnica fotográfica, la composición, la iluminación, el procesado digital, la elaboración del reportaje y las aplicaciones científicas de la fotografía.</item>
        <item>La asignatura Career and Technology responde a la demanda de profesionales con formación multidisciplinar preparados para trabajar en un mundo global con herramientas adecuadas y una mentalidad emprendedora. El programa se imparte exclusivamente en inglés con el objetivo de mejorar las habilidades lingüísticas y ayudar a los estudiantes a expresarse con facilidad en un entorno profesional del sector tecnológico.</item>
        <item>La asignatura de Redes de Área Local pretende proporcionar a los alumnos conocimientos fundamentales sobre redes mediante una combinación de actividades como clases magistrales y una fuerte presencia de prácticas con equipamiento real que apoyan el aprendizaje. La asignatura incorpora los conocimientos asociados a los dos primeros módulos (ITN, RSE) del nivel de formación Cisco Certified Network Associate (CCNA) que están presentes en el programa de aprendizaje Cisco Networking Academy Program (CNAP). En esta asignatura se realizarán los siguientes módulos de aprendizaje del CNAP: &#61623; ITN  Introduction to Networks (CCNA1) &#61623; RSE  Routing and Switching Essentials (CCNA2) Todo el temario estará en inglés, pero las clases magistrales y el apoyo del profesor podrá ser en castellano o catalán. La asignatura proporciona los conocimientos necesarios para diseñar, construir y mantener redes escalables de ordenadores de tamaños medios, incluyendo: Direccionamiento IP, encaminamiento, protecciones indispensables de seguridad, etc.</item>
    </string-array>

</resources>