<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:textColor="@color/purple_200"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:id="@+id/subject1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@color/blue"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title1"
                android:padding="5dp"
                android:src="@mipmap/mviles" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title1"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort1"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/dark_blue" />

        <LinearLayout
            android:id="@+id/subject2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:background="@color/blue"
                android:contentDescription="@string/title1"
                android:padding="5dp"
                android:src="@mipmap/entornos_web" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort2"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/subject3"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:background="@color/blue"
                android:contentDescription="@string/title3"
                android:padding="5dp"
                android:src="@mipmap/programacionobjectos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title3"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort3"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/subject4"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@color/blue"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title4"
                android:padding="5dp"
                android:src="@mipmap/fotografia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title4"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort4"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/dark_blue" />

        <LinearLayout
            android:id="@+id/subject5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@color/blue"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title5"
                android:padding="5dp"
                android:src="@mipmap/careeartech" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title5"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort5"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/dark_blue" />

        <LinearLayout
            android:id="@+id/subject6"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@color/blue"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title6"
                android:padding="5dp"
                android:src="@mipmap/redes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title6"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionShort6"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>